--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
   width: 100%;
 }
 .container {
+  display: flex;
+  flex-direction: column;
   padding-right: 0%;
   padding-left: 0%;
 }
@@ -32,6 +34,51 @@
     height: 150px;
     position: relative;
     top: -100px;
-    left: -10px;
+  }
+  .intro-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .mobile-wrapper {
+    position: relative;
+    top: 90px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .h1-text {
+    justify-content: center;
+    padding: 5% 5% 5% 10%;
+  }
+  .h2-text {
+    justify-content: center;
+    padding: 5% 5% 5% 10%;
+    font-size: 20px;
+  }
+  .h3-text {
+    justify-content: center;
+    padding: 5% 5% 5% 10%;
+    font-size: 14px;
+  }
+  .primary-text {
+    font-style: italic;
+    font-size: 0.8rem;
+    font-weight: 200;
+    padding: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .graphic-wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 10%;
+  }
+  .small-paragraphs {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(219, 219, 219);
   }
 }
